          found while optimizing the palette (so we don't get 256 colour
          palettes for 2 colour images :)
        - initial implementation of a row-based interface to low-level
          images (for performance)
        - changed Imager::read() for GIF so that the arrayref pointed to 
          by the ref supplied in colors contains Imager::Color objects 
          instead of more arrayrefs, keep this interface stable until we 
          can make an informed choice about i_readgif()
        - incorporated Micksa's faxable tiff support, treating as a type
          of tiff rather than a separate format
        - t/t70newgif.t now checks for gif support
        - added the convert() method
        - Added support for transparent to alpha conversion during loading
          of png files.  Note that libpng 1.0.1 is broken in handling this,
	        we know that 1.0.5 works.
        - support for writing PGM (portable gray map) files
        - Fix for i_gifread_low() for images with only a local and no global
          colormap and an abort if no colormap is present (which is legal
          in gif).
        - several fixes to i_readgif_low()
	- Fixed crop() method so that it is consistent with documentation.
        - make clean now removes the testout directory
	- added tests for the OO interface for tiff, added an option to
	  choose the resolution for fax tiffs, removed some unused code,
	  fixed minor problems with Imager::write() handling of image types
        - changed README note on libgif bug to refer to t105gif.t instead
	  of t10formats.t

0.39  pre1
	- split Imager::Font into a base, *::Type1 and *::Truetype
        - writing faxable tiff now allows 2 and 4 channel images

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
